--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -114,7 +114,7 @@ jobs:
       matrix: ${{ fromJson(needs.setup.outputs.matrix) }}
     runs-on: ${{ matrix.labels }}
     steps:
-      - uses: ecmwf-actions/reusable-workflows/build-package-action@feature/build-package-action
+      - uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
         with:
           repository: ${{ inputs.eccodes }}
           build_package_inputs: |
@@ -130,7 +130,7 @@ jobs:
       matrix: ${{ fromJson(needs.setup.outputs.matrix) }}
     runs-on: ${{ matrix.labels }}
     steps:
-      - uses: ecmwf-actions/reusable-workflows/build-package-action@feature/build-package-action
+      - uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
         with:
           repository: ${{ inputs.eckit }}
           build_package_inputs: |
@@ -146,7 +146,7 @@ jobs:
       matrix: ${{ fromJson(needs.setup.outputs.matrix) }}
     runs-on: ${{ matrix.labels }}
     steps:
-      - uses: ecmwf-actions/reusable-workflows/build-package-action@feature/build-package-action
+      - uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
         with:
           repository: ${{ inputs.metkit }}
           build_package_inputs: |
@@ -165,7 +165,7 @@ jobs:
       matrix: ${{ fromJson(needs.setup.outputs.matrix) }}
     runs-on: ${{ matrix.labels }}
     steps:
-      - uses: ecmwf-actions/reusable-workflows/build-package-action@feature/build-package-action
+      - uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
         with:
           repository: ${{ inputs.atlas }}
           build_package_inputs: |
@@ -183,7 +183,7 @@ jobs:
       matrix: ${{ fromJson(needs.setup.outputs.matrix) }}
     runs-on: ${{ matrix.labels }}
     steps:
-      - uses: ecmwf-actions/reusable-workflows/build-package-action@feature/build-package-action
+      - uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
         with:
           repository: ${{ inputs.mir }}
           build_package_inputs: |
