--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -107,7 +107,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: ecmwf-actions/downstream-ci
-        ref: main
+        ref: generate-workflow
     - name: Run setup script
       id: setup
       env:
@@ -119,120 +119,140 @@ jobs:
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.atlas }}
+            optional_matrix: null
           ecmwf/cfgrib:
             path: .github/ci-config.yml
             python: true
             master_branch: master
             develop_branch: master
             input: ${{ inputs.cfgrib }}
+            optional_matrix: null
           ecmwf/earthkit-data:
             path: .github/ci-config.yml
             python: true
             master_branch: main
             develop_branch: develop
             input: ${{ inputs.earthkit-data }}
+            optional_matrix: null
           ecmwf/eccodes:
             path: .github/ci-config.yml
             python: false
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.eccodes }}
+            optional_matrix: null
           ecmwf/eccodes-python:
             path: .github/ci-config.yml
             python: true
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.eccodes-python }}
+            optional_matrix: null
           ecmwf/ecflow:
             path: .github/ci-config.yml
             python: false
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.ecflow }}
+            optional_matrix: null
           ecmwf/ecflow-light:
             path: .github/ci-config.yml
             python: false
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.ecflow-light }}
+            optional_matrix: null
           ecmwf/eckit:
             path: .github/ci-config.yml
             python: false
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.eckit }}
+            optional_matrix: null
           ecmwf/fckit:
             path: .github/ci-config.yml
             python: false
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.fckit }}
+            optional_matrix: null
           ecmwf/fdb:
             path: .github/ci-config.yml
             python: false
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.fdb }}
+            optional_matrix: null
           ecmwf/metkit:
             path: .github/ci-config.yml
             python: false
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.metkit }}
+            optional_matrix: null
           ecmwf/mir:
             path: .github/ci-config.yml
             python: false
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.mir }}
+            optional_matrix: null
           ecmwf/multiurl:
             path: .github/ci-config.yml
             python: true
             master_branch: main
             develop_branch: main
             input: ${{ inputs.multiurl }}
+            optional_matrix: null
           ecmwf/odc:
             path: .github/ci-config.yml
             python: false
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.odc }}
+            optional_matrix: null
           ecmwf/pdbufr:
             path: .github/ci-config.yml
             python: true
             master_branch: master
             develop_branch: master
             input: ${{ inputs.pdbufr }}
+            optional_matrix: null
           ecmwf/plume:
             path: .github/ci-config.yml
             python: false
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.plume }}
+            optional_matrix: null
           ecmwf/pyfdb:
             path: .github/ci-config.yml
             python: true
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.pyfdb }}
+            optional_matrix: null
           ecmwf/pyodc:
             path: .github/ci-config.yml
             python: true
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.pyodc }}
+            optional_matrix: null
           ecmwf/skinnywms:
             path: .github/ci-config.yml
             python: true
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.skinnywms }}
+            optional_matrix: null
           ecmwf/thermofeel:
             path: .github/ci-config.yml
             python: true
             master_branch: master
             develop_branch: develop
             input: ${{ inputs.thermofeel }}
+            optional_matrix: null
         SKIP_MATRIX_JOBS: ${{ inputs.skip_matrix_jobs }}
         PYTHON_VERSIONS: |+
           - '3.10'
@@ -370,6 +390,9 @@ jobs:
           - gnu@fedora-37
           - clang@macos-13-arm
           - clang@macos-13-x86
+        OPTIONAL_MATRIX: |
+          null
+          ...
       run: python setup_downstream_ci.py
   python-qa:
     name: python-qa
